Improving Java 9 compatibility
Remove javax.xml.bind usage (used in base 64 stream decoding)